<resources>
    <string name="app_name">project</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_budget">Budget</string>
    <string name="menu_expenses">expenses</string>
    <string name="menu_income">Income</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment"> </string>
</resources>